# jsonapi-client-cpp

./: CMakeLists.txt  README.md  makefile  test.cpp
Resource code/: main.cpp  object.h
Resource-code/: object.cpp
src/: Resource.cpp  Resource.h  ResourceIdentifier.cpp  ResourceIdentifier.h  Server.cpp  Server.h  main.cpp  makefile  namespace.h  server.cpp  server.h
tests/: test_Resource.cpp  test_create.cpp  test_delete.cpp  test_store.cpp  test_update.cpp
